<resources>
    <string name="app_name">CaseKry</string>

    <string name="status_ok">Status : OK</string>
    <string name="status_fail">Status : FAIL</string>

    <string name="hint_name">Name</string>
    <string name="helper_require">Require</string>
    <string name="hint_url">URL</string>

    <string name="label_add">Add</string>
    <string name="label_cancel">Cancel</string>

    <string name="error_must_not_empty">This field must be fill.</string>
</resources>
